# json-parser

./: .gitignore  json-parser.cabal  stack.yaml
lib/: Decoder.hs  Encoder.hs  Json.hs  Parser.hs  Primitives.hs  QQ.hs
lib/Json/: Base.hs  Parser.hs
lib/Parser/: Base.hs  Combinators.hs
src/: Decoder.hs  Json.hs  Parser.hs  Primitives.hs
test/: TestDecoder.hs  TestEncoder.hs  TestJson.hs  TestParser.hs  TestPrimitives.hs  TestQQ.hs  Tests.hs
