cabal-version: 2.2
name:           json-parser
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/AbsoluteNikola/json-parser#readme>
homepage:       https://github.com/AbsoluteNikola/json-parser#readme
bug-reports:    https://github.com/AbsoluteNikola/json-parser/issues
author:         Nikolay Rulev
maintainer:     example@example.com
copyright:      2020 Nikolay Rulev
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/AbsoluteNikola/json-parser

common shared-properties
  default-language: Haskell2010
  build-depends:
    base == 4.*
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules:
    Parser,
    Primitives,
    Json,
    Decoder
  other-modules:
      Paths_json_parser
  hs-source-dirs:
      src

executable json-parser-exe
  import: shared-properties
  main-is: Main.hs
  other-modules:
      Paths_json_parser
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    json-parser

test-suite json-parser-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
    TestJson
    TestParser
    TestPrimitives
    TestDecoder
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      json-parser
    , tasty ==1.2.3
    , tasty-hunit ==0.10.*
